New report, add 3_task xyz

--- a/lab-4/report/main.tex
+++ b/lab-4/report/main.tex
@@ -57,8 +57,19 @@
 \label{grf2}
 \end{figure}
 
- Алгоритм пройденный путь помечает крестиками, как мы видим путь найден верно, и выведены координаты выхода. Если пути бы выхода не было, то алгоритм бы вывел, что выхода нет.
+ Алгоритм пройденный путь помечает крестиками, как мы видим путь найден верно, и выведены координаты выхода. Если бы выхода не было, то алгоритм бы вывел, что выхода нет.
 
+\newpage
+
+\begin{figure}[H]
+\center{\includegraphics[width=0.9\linewidth]{3_task_xyz.png}}
+\caption{3 task output xyz}
+\label{grf2}
+\end{figure}
+
+Также реализован алгоритм для трёхмерно пространства, ссылка на страничку с кодом в заключении.
+
+Пример был взят для лабиринта размерности 5, так как писать пример для трёхмерного пространства 15x15x15 довольно долго.
 
 \newpage
 \phantomsection
